<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="413dp"
        android:layout_height="449dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkbox_vstup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vstup" />

            <CheckBox
                android:id="@+id/checkbox_rus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rus" />

            <CheckBox
                android:id="@+id/checkbox_math"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/math" />

            <CheckBox
                android:id="@+id/checkbox_phys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phys" />

            <CheckBox
                android:id="@+id/checkbox_chem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chem" />

            <CheckBox
                android:id="@+id/checkbox_bio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <CheckBox
                android:id="@+id/checkbox_hist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hist" />

            <CheckBox
                android:id="@+id/checkbox_geo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/geo" />

            <CheckBox
                android:id="@+id/checkbox_eng"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eng" />

            <CheckBox
                android:id="@+id/checkbox_deu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/deu" />

            <CheckBox
                android:id="@+id/checkbox_french"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fre" />

            <CheckBox
                android:id="@+id/checkbox_soc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/soc" />

            <CheckBox
                android:id="@+id/checkbox_liter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/liter" />

            <CheckBox
                android:id="@+id/checkbox_comps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comps" />
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:onClick="onNextClick"
        android:text="@string/nextButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ошибка!"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

</android.support.constraint.ConstraintLayout>